# chopping-coconut

./: CMakeLists.txt  README.md  main.c  main.cpp
food/: food.c  food.h
game/: game.h
snake/: snake.c  snake.h
